syntax = "proto3";

package shipping;

option go_package = "github.com/Luiz-Gomess/microservices-proto/golang/shipping";

message ShippingItem {
    string product_code = 1;
    int32 quantity = 2;
}

message CreateShippingRequest {
    int64 order_id = 1;
    repeated ShippingItem items = 2;
}

message CreateShippingResponse {
    int64 shipping_id = 1;
    int64 delivery_days = 2;
}

service Shipping {
    rpc Create(CreateShippingRequest) returns (CreateShippingResponse) {}
}